--- a/theming/catalog-info.yaml
+++ b/theming/catalog-info.yaml
@@ -1,7 +1,7 @@
 apiVersion: backstage.io/v1alpha1
 kind: Component
 metadata:
-  name: theme-tests
+  name: theming
   description: An example of a Backstage application.
   # Example for optional annotations
   # annotations:
