--- a/quay/examples/entities.yaml
+++ b/quay/examples/entities.yaml
@@ -12,8 +12,24 @@ apiVersion: backstage.io/v1alpha1
 kind: Component
 metadata:
   name: example-website
+  annotations:
+    quay.io/repository-slug: jerolimov/nodeinfo
 spec:
   type: website
+  lifecycle: experimental
+  owner: guests
+  system: examples
+  providesApis: [example-grpc-api]
+---
+# https://backstage.io/docs/features/software-catalog/descriptor-format#kind-component
+apiVersion: backstage.io/v1alpha1
+kind: Component
+metadata:
+  name: example-service
+  annotations:
+    quay.io/repository-slug: jerolimov/nodeinfo
+spec:
+  type: service
   lifecycle: experimental
   owner: guests
   system: examples
