--- a/sonarqube/examples/entities.yaml
+++ b/sonarqube/examples/entities.yaml
@@ -3,7 +3,7 @@
 apiVersion: backstage.io/v1alpha1
 kind: System
 metadata:
-  name: examples
+  name: backstage
 spec:
   owner: guests
 ---
@@ -11,31 +11,37 @@ spec:
 apiVersion: backstage.io/v1alpha1
 kind: Component
 metadata:
-  name: example-website
+  name: backstage-plugins
+  annotations:
+    sonarqube.org/project-key: janus-idp_backstage-plugins
 spec:
-  type: website
-  lifecycle: experimental
+  type: plugins
+  lifecycle: production
   owner: guests
-  system: examples
-  providesApis: [example-grpc-api]
+  system: backstage
 ---
-# https://backstage.io/docs/features/software-catalog/descriptor-format#kind-api
+# https://backstage.io/docs/features/software-catalog/descriptor-format#kind-component
 apiVersion: backstage.io/v1alpha1
-kind: API
+kind: Component
 metadata:
-  name: example-grpc-api
+  name: backstage-showcase
+  annotations:
+    sonarqube.org/project-key: janus-idp_backstage-showcase
 spec:
-  type: grpc
-  lifecycle: experimental
+  type: app
+  lifecycle: production
   owner: guests
-  system: examples
-  definition: |
-    syntax = "proto3";
-
-    service Exampler {
-      rpc Example (ExampleMessage) returns (ExampleMessage) {};
-    }
-
-    message ExampleMessage {
-      string example = 1;
-    };
+  system: backstage
+---
+# https://backstage.io/docs/features/software-catalog/descriptor-format#kind-component
+apiVersion: backstage.io/v1alpha1
+kind: Component
+metadata:
+  name: operator
+  annotations:
+    sonarqube.org/project-key: janus-idp_operator
+spec:
+  type: operator
+  lifecycle: production
+  owner: guests
+  system: backstage
