--- a/travis/examples/entities.yaml
+++ b/travis/examples/entities.yaml
@@ -12,6 +12,8 @@ apiVersion: backstage.io/v1alpha1
 kind: Component
 metadata:
   name: example-website
+  annotations:
+    travis-ci.com/repo-slug: openshift/ruby-hello-world
 spec:
   type: website
   lifecycle: experimental
