--- a/sonarqube/app-config.yaml
+++ b/sonarqube/app-config.yaml
@@ -103,3 +103,7 @@ catalog:
     #   target: https://github.com/backstage/backstage/blob/master/packages/catalog-model/examples/acme-corp.yaml
     #   rules:
     #     - allow: [User, Group]
+
+sonarqube:
+  baseUrl: https://sonarcloud.io
+  apiKey: ${SONARQUBE_API_KEY}
