--- a/jira/packages/app/package.json
+++ b/jira/packages/app/package.json
@@ -39,6 +39,7 @@
     "@backstage/theme": "^0.5.4",
     "@material-ui/core": "^4.12.2",
     "@material-ui/icons": "^4.9.1",
+    "@roadiehq/backstage-plugin-jira": "^2.5.8",
     "history": "^5.0.0",
     "react": "^18.0.2",
     "react-dom": "^18.0.2",
@@ -49,10 +50,10 @@
   "devDependencies": {
     "@backstage/test-utils": "^1.5.5",
     "@playwright/test": "^1.32.3",
+    "@testing-library/dom": "^9.0.0",
     "@testing-library/jest-dom": "^6.0.0",
     "@testing-library/react": "^14.0.0",
     "@testing-library/user-event": "^14.0.0",
-    "@testing-library/dom": "^9.0.0",
     "@types/react-dom": "*",
     "cross-env": "^7.0.0"
   },
