--- a/jira/app-config.yaml
+++ b/jira/app-config.yaml
@@ -67,6 +67,10 @@ proxy:
       X-Atlassian-Token: 'nocheck'
       User-Agent: "MY-UA-STRING"
 
+jiraDashboard:
+  token: "null"
+  baseUrl: https://issues.redhat.com/rest/api/2/
+
 # Reference documentation http://backstage.io/docs/features/techdocs/configuration
 # Note: After experimenting with basic setup, use CI/CD to generate docs
 # and an external cloud storage when deploying TechDocs for production use-case.
