--- a/jira/packages/app/package.json
+++ b/jira/packages/app/package.json
@@ -14,6 +14,7 @@
     "lint": "backstage-cli package lint"
   },
   "dependencies": {
+    "@axis-backstage/plugin-jira-dashboard": "^1.0.2",
     "@backstage/app-defaults": "^1.5.5",
     "@backstage/catalog-model": "^1.5.0",
     "@backstage/cli": "^0.26.5",
