--- a/jira/packages/backend/package.json
+++ b/jira/packages/backend/package.json
@@ -16,6 +16,7 @@
     "build-image": "docker build ../.. -f Dockerfile --tag backstage"
   },
   "dependencies": {
+    "@axis-backstage/plugin-jira-dashboard-backend": "^2.1.0",
     "@backstage/backend-common": "^0.22.0",
     "@backstage/backend-defaults": "^0.2.18",
     "@backstage/backend-tasks": "^0.5.23",
