Add techdocs-example and hide docs for all other entities

--- a/all-in-one/examples/all.yaml
+++ b/all-in-one/examples/all.yaml
@@ -9,4 +9,5 @@ spec:
     - ./example-grpc-api.yaml
     - ./org.yaml
     - ./template/template.yaml
+    - ./techdocs.yaml
     - ./kubernetes.yaml
