--- a/all-in-one/packages/app/package.json
+++ b/all-in-one/packages/app/package.json
@@ -15,6 +15,8 @@
   },
   "dependencies": {
     "@backstage-community/plugin-playlist": "^0.2.11",
+    "@backstage-community/plugin-sonarqube": "^0.7.17",
+    "@backstage-community/plugin-sonarqube-react": "^0.1.16",
     "@backstage/app-defaults": "^1.5.5",
     "@backstage/catalog-model": "^1.5.0",
     "@backstage/cli": "^0.26.5",
