--- a/all-in-one/app-config.yaml
+++ b/all-in-one/app-config.yaml
@@ -59,10 +59,19 @@ proxy:
     changeOrigin: true
     # Change to "false" in case of using self hosted quay instance with a self-signed certificate
     secure: true
+  '/travisci/api':
+    target: https://api.travis-ci.com
+    changeOrigin: true
+    headers:
+      Authorization: ${TRAVISCI_AUTH_TOKEN}
+      travis-api-version: 3
 
 quay:
   # The UI url for Quay, used to generate the link to Quay
   uiUrl: 'https://quay.io'
+
+travisci:
+  baseUrl: 'https://travis-ci.com/'
 
 # Reference documentation http://backstage.io/docs/features/techdocs/configuration
 # Note: After experimenting with basic setup, use CI/CD to generate docs
