--- a/all-in-one/examples/all-in-one.yaml
+++ b/all-in-one/examples/all-in-one.yaml
@@ -2,9 +2,12 @@
 apiVersion: backstage.io/v1alpha1
 kind: Component
 metadata:
-  name: kubernetes-example
+  name: all-in-one-example
   annotations:
     backstage.io/kubernetes-id: value
+    quay.io/repository-slug: jerolimov/nodeinfo
+    travis-ci.com/repo-slug: openshift/ruby-hello-world
+    sonarqube.org/project-key: janus-idp_backstage-showcase
 spec:
   type: service
   lifecycle: experimental
