--- a/all-in-one/packages/app/package.json
+++ b/all-in-one/packages/app/package.json
@@ -46,6 +46,7 @@
     "@janus-idp/backstage-plugin-quay": "^1.7.1",
     "@material-ui/core": "^4.12.2",
     "@material-ui/icons": "^4.9.1",
+    "@roadiehq/backstage-plugin-travis-ci": "^2.1.23",
     "history": "^5.0.0",
     "react": "^18.0.2",
     "react-dom": "^18.0.2",
