--- a/all-in-one/app-config.yaml
+++ b/all-in-one/app-config.yaml
@@ -21,6 +21,12 @@ backend:
     connect-src: ["'self'", 'http:', 'https:']
     # Content-Security-Policy directives follow the Helmet format: https://helmetjs.github.io/#reference
     # Default Helmet Content-Security-Policy values can be removed by setting the key to false
+    img-src:
+      # "'self'" and 'data' are from the backstage default but must be set since img-src is overriden
+      - "'self'"
+      - 'data:'
+      # Allow your Jira instance for @roadiehq/backstage-plugin-jira
+      - 'https://issues.redhat.com/'
   cors:
     origin: http://localhost:3000
     methods: [GET, HEAD, PATCH, POST, PUT, DELETE]
@@ -50,6 +56,16 @@ proxy:
   #   '/test':
   #     target: 'https://example.com'
   #     changeOrigin: true
+  '/jira/api':
+    target: 'https://issues.redhat.com/'
+    changeOrigin: true
+    headers:
+      Authorization:
+        $env: JIRA_TOKEN
+      Accept: 'application/json'
+      Content-Type: 'application/json'
+      X-Atlassian-Token: 'nocheck'
+      User-Agent: "MY-UA-STRING"
   '/quay/api':
     target: 'https://quay.io'
     headers:
@@ -65,6 +81,10 @@ proxy:
     headers:
       Authorization: ${TRAVISCI_AUTH_TOKEN}
       travis-api-version: 3
+
+jiraDashboard:
+  token: "null"
+  baseUrl: https://issues.redhat.com/rest/api/2/
 
 quay:
   # The UI url for Quay, used to generate the link to Quay
