--- a/all-in-one/examples/all.yaml
+++ b/all-in-one/examples/all.yaml
@@ -15,6 +15,8 @@ spec:
     - ./backstage-plugins.yaml
     - ./backstage-showcase.yaml
     - ./backstage-operator.yaml
+    - ./odc.yaml
+    - ./jira.yaml
     - ./quay.yaml
     - ./travis.yaml
     - ./all-in-one.yaml
