--- a/all-in-one/packages/app/package.json
+++ b/all-in-one/packages/app/package.json
@@ -14,6 +14,7 @@
     "lint": "backstage-cli package lint"
   },
   "dependencies": {
+    "@axis-backstage/plugin-jira-dashboard": "^1.0.2",
     "@backstage-community/plugin-playlist": "^0.2.11",
     "@backstage-community/plugin-sonarqube": "^0.7.17",
     "@backstage-community/plugin-sonarqube-react": "^0.1.16",
@@ -46,6 +47,7 @@
     "@janus-idp/backstage-plugin-quay": "^1.7.1",
     "@material-ui/core": "^4.12.2",
     "@material-ui/icons": "^4.9.1",
+    "@roadiehq/backstage-plugin-jira": "^2.5.8",
     "@roadiehq/backstage-plugin-travis-ci": "^2.1.23",
     "history": "^5.0.0",
     "react": "^18.0.2",
