--- a/all-in-one/packages/app/package.json
+++ b/all-in-one/packages/app/package.json
@@ -18,6 +18,7 @@
     "@backstage-community/plugin-playlist": "^0.2.11",
     "@backstage-community/plugin-sonarqube": "^0.7.17",
     "@backstage-community/plugin-sonarqube-react": "^0.1.16",
+    "@backstage-community/plugin-todo": "^0.2.39",
     "@backstage/app-defaults": "^1.5.5",
     "@backstage/catalog-model": "^1.5.0",
     "@backstage/cli": "^0.26.5",
