--- a/all-in-one/packages/backend/package.json
+++ b/all-in-one/packages/backend/package.json
@@ -19,6 +19,7 @@
     "@axis-backstage/plugin-jira-dashboard-backend": "^2.1.0",
     "@backstage-community/plugin-playlist-backend": "^0.3.23",
     "@backstage-community/plugin-sonarqube-backend": "^0.2.20",
+    "@backstage-community/plugin-todo-backend": "^0.3.17",
     "@backstage/backend-common": "^0.22.0",
     "@backstage/backend-defaults": "^0.2.18",
     "@backstage/backend-tasks": "^0.5.23",
