--- a/all-in-one/packages/backend/package.json
+++ b/all-in-one/packages/backend/package.json
@@ -17,6 +17,7 @@
   },
   "dependencies": {
     "@axis-backstage/plugin-jira-dashboard-backend": "^2.1.0",
+    "@axis-backstage/plugin-readme-backend": "^0.6.0",
     "@backstage-community/plugin-playlist-backend": "^0.3.23",
     "@backstage-community/plugin-sonarqube-backend": "^0.2.20",
     "@backstage-community/plugin-todo-backend": "^0.3.17",
