--- a/all-in-one/packages/app/package.json
+++ b/all-in-one/packages/app/package.json
@@ -47,6 +47,7 @@
     "@backstage/plugin-techdocs-react": "^1.2.4",
     "@backstage/plugin-user-settings": "^0.8.6",
     "@backstage/theme": "^0.5.4",
+    "@janus-idp/backstage-plugin-nexus-repository-manager": "^1.6.3",
     "@janus-idp/backstage-plugin-quay": "^1.7.1",
     "@material-ui/core": "^4.12.2",
     "@material-ui/icons": "^4.9.1",
