--- a/catalog-loadtest/.gitignore
+++ b/catalog-loadtest/.gitignore
@@ -52,3 +52,10 @@ site
 
 # E2E test reports
 e2e-test-report/
+
+/catalog/org/*
+!catalog/org/org-1.yaml
+/catalog/entities/*
+!catalog/entities/entity-1.yaml
+/catalog/templates/*
+!catalog/templates/template-1.yaml
