--- a/catalog-loadtest/app-config.yaml
+++ b/catalog-loadtest/app-config.yaml
@@ -80,17 +80,17 @@ catalog:
   locations:
     # Local example data, file locations are relative to the backend process, typically `packages/backend`
     - type: file
-      target: ../../examples/entities.yaml
+      target: ../../catalog/entities.yaml
 
     # Local example template
     - type: file
-      target: ../../examples/template/template.yaml
+      target: ../../catalog/templates.yaml
       rules:
         - allow: [Template]
 
     # Local example organizational data
     - type: file
-      target: ../../examples/org.yaml
+      target: ../../catalog/orgs.yaml
       rules:
         - allow: [User, Group]
 
