--- a/backstage-components-with-nextjs/package.json
+++ b/backstage-components-with-nextjs/package.json
@@ -9,16 +9,23 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@backstage/core-app-api": "^1.12.6",
+    "@backstage/core-components": "^0.14.8",
+    "@backstage/theme": "^0.5.6",
+    "@emotion/cache": "^11.11.0",
+    "@mui/material-nextjs": "^5.15.11",
+    "next": "14.2.4",
     "react": "^18",
     "react-dom": "^18",
-    "next": "14.2.4"
+    "react-router": "^6.24.0",
+    "react-router-dom": "^6.24.0"
   },
   "devDependencies": {
-    "typescript": "^5",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "eslint": "^8",
-    "eslint-config-next": "14.2.4"
+    "eslint-config-next": "14.2.4",
+    "typescript": "^5"
   }
 }
