--- a/backstage-components-with-nextjs/package.json
+++ b/backstage-components-with-nextjs/package.json
@@ -14,6 +14,7 @@
     "@backstage/theme": "^0.5.6",
     "@emotion/cache": "^11.11.0",
     "@mui/material-nextjs": "^5.15.11",
+    "@redhat-developer/red-hat-developer-hub-theme": "0.0.57",
     "next": "14.2.4",
     "react": "^18",
     "react-dom": "^18",
