--- a/catalog-plugin-type/examples/entities.yaml
+++ b/catalog-plugin-type/examples/entities.yaml
@@ -3,39 +3,98 @@
 apiVersion: backstage.io/v1alpha1
 kind: System
 metadata:
-  name: examples
+  name: rhdh
 spec:
-  owner: guests
+  owner: rhdh-team
+
 ---
 # https://backstage.io/docs/features/software-catalog/descriptor-format#kind-component
 apiVersion: backstage.io/v1alpha1
 kind: Component
 metadata:
-  name: example-website
+  name: janus-idp-rbac
+  title: RBAC Plugin
+  description: RBAC Plugin for Backstage and RHDH
+  labels:
+    rhdh/prebundled: 'true'
+  annotations:
+    backstage.io/source-location: url:https://github.com/janus-idp/backstage-plugins/tree/main/plugins/rbac
+    backstage.io/view-url: https://github.com/janus-idp/backstage-plugins/blob/main/plugins/rbac/catalog-info.yaml
+    backstage.io/edit-url: https://github.com/janus-idp/backstage-plugins/edit/main/plugins/rbac/catalog-info.yaml
+    github.com/project-slug: backstage/backstage
+    #github.com/team-slug: backstage/maintainers
+    sonarqube.org/project-key: janus-idp_backstage-plugins
+  tags:
+    - security
+    - rbac
+  links:
+    - url: https://admin.example-org.com
+      title: Jira Dashboard
+      icon: dashboard
+      type: jira-dashboard
+spec:
+  type: backstage-plugin
+  lifecycle: production
+  owner: rhdh-team
+  system: rhdh
+
+---
+# https://backstage.io/docs/features/software-catalog/descriptor-format#kind-component
+apiVersion: backstage.io/v1alpha1
+kind: Component
+metadata:
+  name: janus-idp-rbac-backend-plugin
+spec:
+  type: backstage-backend-plugin
+  lifecycle: production
+  owner: rhdh-core-team
+  system: rhdh
+  subcomponentOf: janus-idp-rbac
+---
+# https://backstage.io/docs/features/software-catalog/descriptor-format#kind-component
+apiVersion: backstage.io/v1alpha1
+kind: Component
+metadata:
+  name: janus-idp-rbac-common
+spec:
+  type: backstage-common-library
+  lifecycle: production
+  owner: rhdh-team
+  system: rhdh
+  subcomponentOf: janus-idp-rbac
+---
+# https://backstage.io/docs/features/software-catalog/descriptor-format#kind-component
+apiVersion: backstage.io/v1alpha1
+kind: Component
+metadata:
+  name: janus-idp-rbac-node
+spec:
+  type: backstage-node-library
+  lifecycle: production
+  owner: rhdh-team
+  system: rhdh
+  subcomponentOf: janus-idp-rbac
+---
+# https://backstage.io/docs/features/software-catalog/descriptor-format#kind-component
+apiVersion: backstage.io/v1alpha1
+kind: Component
+metadata:
+  name: janus-idp-rbac-plugin
+spec:
+  type: backstage-frontend-plugin
+  lifecycle: production
+  owner: rhdh-ui-team
+  system: rhdh
+  subcomponentOf: janus-idp-rbac
+
+---
+# https://backstage.io/docs/features/software-catalog/descriptor-format#kind-component
+apiVersion: backstage.io/v1alpha1
+kind: Component
+metadata:
+  name: test-website
 spec:
   type: website
-  lifecycle: experimental
-  owner: guests
-  system: examples
-  providesApis: [example-grpc-api]
----
-# https://backstage.io/docs/features/software-catalog/descriptor-format#kind-api
-apiVersion: backstage.io/v1alpha1
-kind: API
-metadata:
-  name: example-grpc-api
-spec:
-  type: grpc
-  lifecycle: experimental
-  owner: guests
-  system: examples
-  definition: |
-    syntax = "proto3";
-
-    service Exampler {
-      rpc Example (ExampleMessage) returns (ExampleMessage) {};
-    }
-
-    message ExampleMessage {
-      string example = 1;
-    };
+  lifecycle: production
+  owner: rhdh-ui-team
+  system: rhdh
