--- a/npm/examples/entities.yaml
+++ b/npm/examples/entities.yaml
@@ -7,6 +7,14 @@ metadata:
 spec:
   owner: guests
 ---
+# https://backstage.io/docs/features/software-catalog/descriptor-format#kind-system
+apiVersion: backstage.io/v1alpha1
+kind: System
+metadata:
+  name: rhdh
+spec:
+  owner: guests
+---
 # https://backstage.io/docs/features/software-catalog/descriptor-format#kind-component
 apiVersion: backstage.io/v1alpha1
 kind: Component
@@ -117,3 +125,31 @@ spec:
     - component:backstage-catalog-client
     - component:backstage-plugin-catalog-common
     - component:backstage-plugin-catalog-node
+---
+# https://backstage.io/docs/features/software-catalog/descriptor-format#kind-component
+apiVersion: backstage.io/v1alpha1
+kind: Component
+metadata:
+  name: 'janus-idp-backstage-plugin-topology'
+  annotations:
+    npm/package: '@janus-idp/backstage-plugin-topology'
+spec:
+  type: service
+  lifecycle: production
+  owner: guests
+  system: rhdh
+  dependsOn:
+    - component:janus-idp-backstage-plugin-topology-common
+---
+# https://backstage.io/docs/features/software-catalog/descriptor-format#kind-component
+apiVersion: backstage.io/v1alpha1
+kind: Component
+metadata:
+  name: 'janus-idp-backstage-plugin-topology-common'
+  annotations:
+    npm/package: '@janus-idp/backstage-plugin-topology-common'
+spec:
+  type: service
+  lifecycle: production
+  owner: guests
+  system: rhdh
