--- a/theming/packages/app/package.json
+++ b/theming/packages/app/package.json
@@ -41,7 +41,8 @@
     "@backstage/theme": "^0.5.0",
     "@material-ui/core": "^4.12.2",
     "@material-ui/icons": "^4.9.1",
-    "@mui/material": "^5.15.9",
+    "@material-ui/lab": "^4.0.0-alpha.61",
+    "@mui/material": "^5.16.1",
     "history": "^5.0.0",
     "react": "^18.0.2",
     "react-dom": "^18.0.2",
