--- a/rhdh-theme/packages/app/package.json
+++ b/rhdh-theme/packages/app/package.json
@@ -39,6 +39,8 @@
     "@backstage/theme": "^0.5.4",
     "@material-ui/core": "^4.12.2",
     "@material-ui/icons": "^4.9.1",
+    "@material-ui/lab": "^4.0.0-alpha.61",
+    "@mui/material": "^5.16.1",
     "@redhat-developer/red-hat-developer-hub-theme": "0.0.55",
     "history": "^5.0.0",
     "react": "^18.0.2",
