--- a/all-in-one/packages/app/package.json
+++ b/all-in-one/packages/app/package.json
@@ -51,7 +51,9 @@
     "@janus-idp/backstage-plugin-quay": "^1.7.1",
     "@material-ui/core": "^4.12.2",
     "@material-ui/icons": "^4.9.1",
-    "@redhat-developer/red-hat-developer-hub-theme": "0.0.55",
+    "@material-ui/lab": "^4.0.0-alpha.61",
+    "@mui/material": "^5.16.1",
+    "@redhat-developer/red-hat-developer-hub-theme": "0.0.57",
     "@roadiehq/backstage-plugin-jira": "^2.5.8",
     "@roadiehq/backstage-plugin-travis-ci": "^2.1.23",
     "history": "^5.0.0",
