--- a/rhdh-theme/packages/app/package.json
+++ b/rhdh-theme/packages/app/package.json
@@ -41,7 +41,7 @@
     "@material-ui/icons": "^4.9.1",
     "@material-ui/lab": "^4.0.0-alpha.61",
     "@mui/material": "^5.16.1",
-    "@redhat-developer/red-hat-developer-hub-theme": "0.0.55",
+    "@redhat-developer/red-hat-developer-hub-theme": "^0.0.63",
     "history": "^5.0.0",
     "react": "^18.0.2",
     "react-dom": "^18.0.2",
@@ -75,5 +75,5 @@
     "dist",
     "config.d.ts"
   ],
-   "configSchema": "config.d.ts"
+  "configSchema": "config.d.ts"
 }
