--- a/npm/packages/app/package.json
+++ b/npm/packages/app/package.json
@@ -14,6 +14,7 @@
     "lint": "backstage-cli package lint"
   },
   "dependencies": {
+    "@backstage-community/plugin-npm": "1.0.0",
     "@backstage/app-defaults": "^1.5.6",
     "@backstage/catalog-model": "^1.5.0",
     "@backstage/cli": "^0.26.7",
@@ -37,7 +38,6 @@
     "@backstage/plugin-techdocs-react": "^1.2.5",
     "@backstage/plugin-user-settings": "^0.8.7",
     "@backstage/theme": "^0.5.6",
-    "@internal/backstage-plugin-npm": "^0.1.0",
     "@material-ui/core": "^4.12.2",
     "@material-ui/icons": "^4.9.1",
     "history": "^5.0.0",
