--- a/dynamic-plugins/app-config.yaml
+++ b/dynamic-plugins/app-config.yaml
@@ -111,3 +111,6 @@ kubernetes:
 permission:
   # setting this to `false` will disable permissions
   enabled: true
+
+dynamicPlugins:
+  rootDirectory: dynamic-plugins-root
