--- a/dynamic-plugins/packages/backend/package.json
+++ b/dynamic-plugins/packages/backend/package.json
@@ -17,6 +17,7 @@
   },
   "dependencies": {
     "@backstage/backend-defaults": "^0.5.1",
+    "@backstage/backend-dynamic-feature-service": "^0.4.3",
     "@backstage/config": "^1.2.0",
     "@backstage/plugin-app-backend": "^0.3.76",
     "@backstage/plugin-auth-backend": "^0.23.1",
