--- a/dynamic-plugins/app-config.yaml
+++ b/dynamic-plugins/app-config.yaml
@@ -78,21 +78,10 @@ catalog:
   rules:
     - allow: [Component, System, API, Resource, Location]
   locations:
-    # Local example data, file locations are relative to the backend process, typically `packages/backend`
-    - type: file
-      target: ../../examples/entities.yaml
-
-    # Local example template
-    - type: file
-      target: ../../examples/template/template.yaml
+    - type: url
+      target: https://github.com/backstage/community-plugins/blob/main/workspaces/npm/examples/entities.yaml
       rules:
-        - allow: [Template]
-
-    # Local example organizational data
-    - type: file
-      target: ../../examples/org.yaml
-      rules:
-        - allow: [User, Group]
+        - allow: [System, Component]
 
     ## Uncomment these lines to add more example data
     # - type: url
