--- a/mcp/packages/backend/package.json
+++ b/mcp/packages/backend/package.json
@@ -41,6 +41,7 @@
     "@backstage/plugin-search-backend-module-techdocs": "^0.4.3",
     "@backstage/plugin-search-backend-node": "^1.3.12",
     "@backstage/plugin-techdocs-backend": "^2.0.3",
+    "@internal/plugin-action-test-backend": "workspace:^",
     "app": "link:../app",
     "better-sqlite3": "^9.0.0",
     "node-gyp": "^10.0.0",
