--- a/cicd-stats/examples/entities.yaml
+++ b/cicd-stats/examples/entities.yaml
@@ -12,6 +12,9 @@ apiVersion: backstage.io/v1alpha1
 kind: Component
 metadata:
   name: example-website
+  annotations:
+    backstage.io/source-location: url:https://github.com/backstage/backstage
+    github.com/project-slug: backstage/backstage
 spec:
   type: website
   lifecycle: experimental
