--- a/bugzilla/app-config.yaml
+++ b/bugzilla/app-config.yaml
@@ -1,5 +1,5 @@
 app:
-  title: Scaffolded Backstage App
+  title: Bugzilla Test App
   baseUrl: http://localhost:3000
 
 organization:
@@ -44,12 +44,15 @@ integrations:
     #   token: ${GHE_TOKEN}
 
 proxy:
-  ### Example for how to add a proxy endpoint for the frontend.
-  ### A typical reason to do this is to handle HTTPS and CORS for internal services.
-  # endpoints:
-  #   '/test':
-  #     target: 'https://example.com'
-  #     changeOrigin: true
+  endpoints:
+    '/bugzilla/kernel':
+      target: 'https://bugzilla.kernel.org'
+      changeOrigin: true
+      credentials: dangerously-allow-unauthenticated
+    '/bugzilla/redhat':
+      target: 'https://bugzilla.redhat.com'
+      changeOrigin: true
+      credentials: dangerously-allow-unauthenticated
 
 # Reference documentation http://backstage.io/docs/features/techdocs/configuration
 # Note: After experimenting with basic setup, use CI/CD to generate docs
@@ -80,29 +83,14 @@ catalog:
   locations:
     # Local example data, file locations are relative to the backend process, typically `packages/backend`
     - type: file
-      target: ../../examples/entities.yaml
-
-    # Local example template
-    - type: file
-      target: ../../examples/template/template.yaml
+      target: ../../examples/kernel.yaml
       rules:
-        - allow: [Template]
+        - allow: [Component, System, User, Group]
 
-    # Local example organizational data
     - type: file
-      target: ../../examples/org.yaml
+      target: ../../examples/guest.yaml
       rules:
-        - allow: [User, Group]
-
-    ## Uncomment these lines to add more example data
-    # - type: url
-    #   target: https://github.com/backstage/backstage/blob/master/packages/catalog-model/examples/all.yaml
-
-    ## Uncomment these lines to add an example org
-    # - type: url
-    #   target: https://github.com/backstage/backstage/blob/master/packages/catalog-model/examples/acme-corp.yaml
-    #   rules:
-    #     - allow: [User, Group]
+        - allow: [User]
 
 kubernetes:
   # see https://backstage.io/docs/features/kubernetes/configuration for kubernetes configuration options
