--- a/servicenow/packages/app/package.json
+++ b/servicenow/packages/app/package.json
@@ -14,6 +14,7 @@
     "lint": "backstage-cli package lint"
   },
   "dependencies": {
+    "@backstage-community/plugin-servicenow": "^1.1.1",
     "@backstage/app-defaults": "^1.6.5",
     "@backstage/catalog-model": "^1.7.5",
     "@backstage/cli": "^0.34.0",
