--- a/servicenow-nfs/packages/backend/package.json
+++ b/servicenow-nfs/packages/backend/package.json
@@ -16,6 +16,7 @@
     "build-image": "docker build ../.. -f Dockerfile --tag backstage"
   },
   "dependencies": {
+    "@backstage-community/plugin-servicenow-backend": "^1.1.0",
     "@backstage/backend-defaults": "^0.12.0",
     "@backstage/config": "^1.3.3",
     "@backstage/plugin-app-backend": "^0.5.5",
