--- a/scaffolder-chat-integration/packages/backend/package.json
+++ b/scaffolder-chat-integration/packages/backend/package.json
@@ -46,6 +46,7 @@
     "@backstage/plugin-techdocs-backend": "^2.1.2",
     "@internal/backstage-plugin-scaffolder-backend-module-matrix": "workspace:^",
     "@internal/backstage-plugin-scaffolder-backend-module-openai": "workspace:^",
+    "@internal/backstage-plugin-scaffolder-backend-module-scheduler": "workspace:^",
     "app": "link:../app",
     "better-sqlite3": "^12.0.0",
     "node-gyp": "^10.0.0",
