add genai and slack scaffolder actions
Signed-off-by: Christoph Jerolimov <jerolimov+git@gmail.com>

--- a/scaffolder-chat-integration/packages/backend/package.json
+++ b/scaffolder-chat-integration/packages/backend/package.json
@@ -44,9 +44,13 @@
     "@backstage/plugin-search-backend-node": "^1.3.17",
     "@backstage/plugin-signals-backend": "^0.3.10",
     "@backstage/plugin-techdocs-backend": "^2.1.2",
+    "@internal/backstage-plugin-scaffolder-backend-module-genai": "workspace:^",
+    "@internal/backstage-plugin-scaffolder-backend-module-llama-stack": "workspace:^",
     "@internal/backstage-plugin-scaffolder-backend-module-matrix": "workspace:^",
+    "@internal/backstage-plugin-scaffolder-backend-module-ollama": "workspace:^",
     "@internal/backstage-plugin-scaffolder-backend-module-openai": "workspace:^",
     "@internal/backstage-plugin-scaffolder-backend-module-scheduler": "workspace:^",
+    "@internal/backstage-plugin-scaffolder-backend-module-slack": "workspace:^",
     "app": "link:../app",
     "better-sqlite3": "^12.0.0",
     "node-gyp": "^10.0.0",
