--- a/nfs-customization/packages/app/package.json
+++ b/nfs-customization/packages/app/package.json
@@ -14,6 +14,7 @@
     "lint": "backstage-cli package lint"
   },
   "dependencies": {
+    "@backstage-community/plugin-npm": "^1.17.0",
     "@backstage/cli": "^0.35.2",
     "@backstage/core-compat-api": "^0.5.6",
     "@backstage/core-components": "^0.18.5",
