--- a/nfs-customization/packages/backend/package.json
+++ b/nfs-customization/packages/backend/package.json
@@ -16,6 +16,7 @@
     "build-image": "docker build ../.. -f Dockerfile --tag backstage"
   },
   "dependencies": {
+    "@backstage-community/plugin-npm-backend": "^1.17.0",
     "@backstage/backend-defaults": "^0.15.0",
     "@backstage/config": "^1.3.6",
     "@backstage/plugin-app-backend": "^0.5.10",
