--- a/nfs-customization/packages/app/package.json
+++ b/nfs-customization/packages/app/package.json
@@ -36,7 +36,8 @@
     "react": "^18.0.2",
     "react-dom": "^18.0.2",
     "react-router": "^6.3.0",
-    "react-router-dom": "^6.3.0"
+    "react-router-dom": "^6.3.0",
+    "react-use": "^17.6.0"
   },
   "devDependencies": {
     "@backstage/frontend-test-utils": "^0.4.3",
